@@ -2,6 +2,10 @@ devscripts (2.15.7) UNRELEASED; urgency=medium
 
   * licensecheck:
     + Use Dpkg::IPC to run file to avoid shell injection.  (Closes: #794260)
+    + Change whitelist of mime types to greylist of encodings.  Restores
+      ability to check files with mime types like text/x-c++ and
+      application/postscript.  Thanks to Jonas Smedegaard for the patch.
+      (Closes: #794282)
 
  -- James McCoy <jamessan@debian.org>  Fri, 31 Jul 2015 19:53:04 -0400
 
